# kart_game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  run.bat  run.sh
include/: config.h  entity.h  game.h  input_manager.h  player.h  texture_manager.h
source/: entity.cpp  game.cpp  input_manager.cpp  texture_manager.cpp
